k8s/bakos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bakos-game-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pmqxyz.hopto.org
      secretName: my-tls-secret
  rules:
    - host: pmqxyz.hopto.org
      http:
        paths:
          - path: /bakos/
            pathType: Prefix
            backend:
              service:
                name: bakos-game-service
                port:
                  number: 8105
